Updates from Keld achtung/po/da.po balsa/po/da.po bonobo/po/da.po
Updates from Keld
achtung/po/da.po balsa/po/da.po bonobo/po/da.po
bug-buddy/po/da.po control-center-HEAD/po/da.po
control-center/po/da.po dia/po/da.po dr-genius/po/da.po
ee/po/da.po eog/po/da.po evolution/po/da.po gal/po/da.po
galeon/po/da.po gconf/po/da.po gdm2/po/da.po
Tag: gedit-1-0
gedit/po/da.po
No tag
gernel/po/da.po gfax/po/da.po gfloppy/po/da.po ggv/po/da.po
ghex/po/da.po gimp/po/da.po gimp/po-libgimp/da.po
gimp/po-plug-ins/da.po gimp/po-script-fu/da.po glade/po/da.po
gnome-applets/po/da.po gnome-chess/po/da.po
gnome-core/po/da.po gnome-db/po/da.po gnome-games/po/da.po
gnome-iconedit/po/da.po gnome-libs-HEAD/po/da.po
gnome-libs/po/da.po gnome-lokkit/po/da.po gnome-media/po/da.po
gnome-pilot/po/da.po gnome-pim/po/da.po gnome-print/po/da.po
gnome-utils/po/da.po gnome-vfs/po/da.po gnomeicu/po/da.po
gnopo/po/da.po gnorpm/po/da.po gnumeric/po/da.po
gphoto/po/da.po gtk+/po/da.po gtkhtml/po/da.po
gtranslator/po/da.po guppi3/po/da.po gxsnmp/po/da.po
helix-setup-tools/po/da.po libgda/po/da.po libgtop/po/da.po
magicdev/po/da.po mc/po/da.po memprof/po/da.po oaf/po/da.po
pan/po/da.po pong/po/da.po
Tag: v_1_0_x
pybliographer/po/da.po
No tag
rp3/po/da.po sodipodi/po/da.po xpdf/po/da.po

Former-commit-id: 36ee46c852a7deb1c44bd4e18045d1dd6f32a665

--- a/po-plug-ins/da.po
+++ b/po-plug-ins/da.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP plug-ins /gnome-cvs\n"
 "POT-Creation-Date: 2000-12-09 11:19-0800\n"
-"PO-Revision-Date: 2000-11-30 10:34+01:00\n"
+"PO-Revision-Date: 2000-12-09 19:34+01:00\n"
 "Last-Translator: Keld Simonsen <keld@dkuug.dk>\n"
 "Language-Team: Danish/Dansk <sslug-locale@sslug.dk>\n"
 "MIME-Version: 1.0\n"
@@ -4390,7 +4390,6 @@ msgid "Subsampling:"
 msgstr "Undersampling:"
 
 #: plug-ins/common/jpeg.c:1801
-#, fuzzy
 msgid "Fast Integer"
 msgstr "Hurtigt heltal"
 
@@ -4399,9 +4398,8 @@ msgid "Integer"
 msgstr "Heltal"
 
 #: plug-ins/common/jpeg.c:1803
-#, fuzzy
 msgid "Floating-Point"
-msgstr "Flydende tal"
+msgstr "Kommatal"
 
 #: plug-ins/common/jpeg.c:1807
 msgid "DCT method (Speed/quality tradeoff):"
@@ -6279,19 +6277,19 @@ msgid "RunLength Encoded"
 msgstr "RL kodet"
 
 #: plug-ins/common/tga.c:425
-#, fuzzy, c-format
+#, c-format
 msgid "TGA: can't open \"%s\"\n"
-msgstr "kan ikke åbne \"%s\"\n"
+msgstr "TGA: Kan ikke åbne \"%s\"\n"
 
 #: plug-ins/common/tga.c:435
-#, fuzzy, c-format
+#, c-format
 msgid "TGA: Cannot read footer from \"%s\"\n"
-msgstr "XBM: kan ikke oprette \"%s\"\n"
+msgstr "TGA: Kan ikke læse bundtekst fra \"%s\"\n"
 
 #: plug-ins/common/tga.c:446
-#, fuzzy, c-format
+#, c-format
 msgid "TGA: Cannot read extension from \"%s\"\n"
-msgstr "XBM: kan ikke oprette \"%s\"\n"
+msgstr "TGA: Kan ikke læse udvidelse fra \"%s\"\n"
 
 #: plug-ins/common/tga.c:1178
 msgid "Save as TGA"
@@ -8185,6 +8183,9 @@ msgid ""
 "on the same AnimFrame Image at the same time\n"
 "LOCK ID:%s\n"
 msgstr ""
+"Kan ikke udføre mere end 1 videofunktion\n"
+"på det samme AnimFrame billede på samme tid\n"
+"LOCK ID:%s\n"
 
 #: plug-ins/gap/gap_main.c:482
 msgid "<Image>/Video/Goto/Next Frame"
@@ -8552,7 +8553,7 @@ msgstr "Øverst til højre"
 
 #: plug-ins/gap/gap_mov_dialog.c:285
 msgid "Right Bottom"
-msgstr "Neders til højre"
+msgstr "Nederst til højre"
 
 #: plug-ins/gap/gap_mov_dialog.c:294
 msgid "Loop"
@@ -8575,34 +8576,28 @@ msgid "PingPong"
 msgstr "Ping-Pong"
 
 #: plug-ins/gap/gap_mov_dialog.c:300
-#, fuzzy
 msgid "Frame Loop"
-msgstr "Ramme %d"
+msgstr "Rammesløjfe"
 
 #: plug-ins/gap/gap_mov_dialog.c:301
-#, fuzzy
 msgid "Frame Loop Reverse"
-msgstr "Omvendt sløjfe"
+msgstr "Rammesløjfe baglæns"
 
 #: plug-ins/gap/gap_mov_dialog.c:302
-#, fuzzy
 msgid "Frame Once"
-msgstr "Ramme %d"
+msgstr "Ramme én gang"
 
 #: plug-ins/gap/gap_mov_dialog.c:303
-#, fuzzy
 msgid "Frame OnceReverse"
-msgstr "En gang - omvendt"
+msgstr "Ramme én gang baglæns"
 
 #: plug-ins/gap/gap_mov_dialog.c:304
-#, fuzzy
 msgid "Frame PingPong"
-msgstr "Ping-Pong"
+msgstr "Ramme ping-pong"
 
 #: plug-ins/gap/gap_mov_dialog.c:305
-#, fuzzy
 msgid "Frame None"
-msgstr "Ramme %d"
+msgstr "Ramme intet"
 
 #: plug-ins/gap/gap_mov_dialog.c:480
 msgid "Move Path"
