--- a/po-script-fu/da.po
+++ b/po-script-fu/da.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP script-fu/gnome-cvs\n"
 "POT-Creation-Date: 2000-12-09 11:20-0800\n"
-"PO-Revision-Date: 2000-06-10 23:41+01:00\n"
+"PO-Revision-Date: 2000-12-09 23:41+01:00\n"
 "Last-Translator: Keld Simonsen <keld@dkuug.dk>\n"
 "Language-Team: Danish <sslug-locale@sslug.dk>\n"
 "MIME-Version: 1.0\n"
@@ -147,12 +147,15 @@ msgid "Script-Fu Font Selection"
 msgstr "Skript-Fu skrifttypevælger"
 
 #: plug-ins/script-fu/script-fu-scripts.c:2256
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Script-Fu Error while executing\n"
 " %s\n"
 "%s"
-msgstr "Skript-Fu filvælger"
+msgstr ""
+"Script-Fu fejl ved udførsel af\n"
+" %s\n"
+"%s"
 
 #: plug-ins/script-fu/script-fu-server.c:539
 msgid "Script-Fu Server Options"
