forgot to bump gimp-print's version number and release date when updating
2000-12-11  Michael Natterer  <mitch@gimp.org>

	* configure.in: forgot to bump gimp-print's version number and
	release date when updating to 4.0.4


Former-commit-id: b55be14fa2403c3366c6325bdefb9f63442835db

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-11  Michael Natterer  <mitch@gimp.org>
+
+	* configure.in: forgot to bump gimp-print's version number and
+	release date when updating to 4.0.4
+
 Sat Dec  9 11:43:33 PST 2000 Manish Singh <yosh@gimp.org>
 
 	* Made 1.1.30 release (1.2final)
