--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2000-12-11  Sven Neumann  <sven@gimp.org>
 
+	* app/gradient.c: use the correct pointer when dumping gradients to
+	stderr in case of problems. Sort of fixes bug #31510.
+
+2000-12-11  Sven Neumann  <sven@gimp.org>
+
 	* app/gimphistogram.c (gimp_histogram_calculate_sub_region): 
 	corrected incrementor for the bpp == 4 case. Fixes bug #34738.
 
