--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2000-12-11  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/gdyntext/font_selection.c
+	* plug-ins/winsnap/winsnap.c: use new GTK+ API
+	s/gtk_toggle_button_set_state/gtk_toggle_button_set_active/
+	s/gtk_container_border_width/gtk_container_set_border_width/
+	
+2000-12-11  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/convmatrix.c: return with an error message if
 	called with drawables smaller than 3 pixels. Fixes bug #30870.
 
