--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Dec 11 22:52:43 GMT 2000 Andy Thomas <alt@gimp.org>
+
+	* app/gimpimage.c
+        * app/layers_dialog.c
+	
+	Backed out some changes that caused problems with the Nav preview
+	and small sized images.
+
 2000-12-11  Sven Neumann  <sven@gimp.org>
 
 	* app/channel.c (channel_invalidate_previews): check for NULL pointer
