Continue after errors from libtiff - ie they are no longer fatal  (#28799)
Former-commit-id: 9a4bd0221d2a48ab255a1a97943610a61bbed2c5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-12  Nick Lamb  <njl195@zepler.org.uk>
+
+	* plug-ins/common/tiff.c: Continue after errors (#28799)
+
 Mon Dec 11 22:52:43 GMT 2000 Andy Thomas <alt@gimp.org>
 
 	* app/gimpimage.c
