Updated Hungarian translation
Former-commit-id: b25f5955dafa7f7b6fcc247b84cc85a894ccb95c

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-12  Szabolcs Ban <shooby@gnome.hu>
+
+	* hu.po: Updated Hungarian translation from
+	  Andras TIMAR <timar@gnome.hu>
+	
 2000-12-05  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Fixed up Norwegian translation.
