Fixed bad default JPEG quality setting in save_image  -klm 12/12/00
Former-commit-id: 5a590837777c072c3eb9c57ef77ea459551057d9

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-12  Kelly Martin  <kmartin@kiva.net>
+
+	* plug-ins/perl/Gimp/Fu.pm: fixed default JPEG quality (0.75
+	  instead of 75 -- jpeg plug-in wants a fraction)
+
 2000-12-12  Austin Donnelly  <austin@gimp.org>
 
 	* plug-ins/common/autocrop.c: Fixed #7689: plug-in-autocrop shows
