Small algo improvements.
* plug-ins/common/spheredesigner.c: Small algo improvements.


Former-commit-id: b2b5e03d57d1c96abb8a0ddd929d2fea2be8a9d3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-13  Vidar Madsen  <vidar@gimp.org>
+
+	* plug-ins/common/spheredesigner.c: Small algo improvements.
+
 2000-12-12  Vidar Madsen  <vidar@gimp.org>
 
 	* plug-ins/common/spheredesigner.c: Nicer bumpmapping.
