--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-13  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-12-09  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Updated Polish translation
