--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-13  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated translation and applied a patch from
+	Wolfgang Hofer that fixes some GAP translations.
+
 2000-12-13  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
