Updated russian translation.
Former-commit-id: 0c693932c0727035bf0f89a66b1dd8e77e5956de

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-15  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-12-13  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated translation and applied a patch from
