--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-15  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Updated russian translation.
+
 2000-12-12  Szabolcs Ban <shooby@gnome.hu>
 
 	* hu.po: Updated Hungarian translation from
